сменил цвет фона в городах и техно

--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1025,7 +1025,7 @@ body {
   /*---------------------------------------------technology-----------------------------------*/
 
   .techno_slider {
-    background: #8b47e3;
+    background: #b37afd;
     padding: 20px;
     border-radius: 10px;
     margin-top: 20px;
@@ -2072,14 +2072,14 @@ body {
   // }
   
   .cities {
-    color: $main-white-color;
+    color: #1a0930;
     column-gap: 20px;
     display: flex;
     font-size: 14px;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
-    background: #a769f7;
+    background: #b37afd;
     border-radius: 10px;
 }
   /*---------------------------------------------------------------------------------------------------*/
