--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -1366,7 +1366,7 @@ section.form_row {
 /*-------------------------------------------------------------------------------------------------------*/
 /*---------------------------------------------technology-----------------------------------*/
 .techno_slider {
-  background: #8b47e3;
+  background: #b37afd;
   padding: 20px;
   border-radius: 10px;
   margin-top: 20px;
@@ -2684,7 +2684,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 }
 
 .cities {
-  color: #f7f2ff;
+  color: #1a0930;
   -webkit-column-gap: 20px;
      -moz-column-gap: 20px;
           column-gap: 20px;
@@ -2698,7 +2698,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 20px;
-  background: #a769f7;
+  background: #b37afd;
   border-radius: 10px;
 }
 
