--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -663,6 +663,10 @@ body {
 
     .services-block__text-price{
       text-decoration: underline;
+      font-family: "Inter";
+      font-size: 16px;
+      line-height: 20px;
+      color: #ffffff;
     }
   }
 
