--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -644,6 +644,7 @@ body {
     flex-direction: column;
     gap: 10px;
     justify-content: space-between;
+    height: 100%;
     
     .service-block-top{
       display: flex;
