--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -910,6 +910,7 @@ section.form_row {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  height: 100%;
 }
 .service-block_left .service-block-top {
   display: -webkit-box;
