--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -795,6 +795,30 @@ ul.header_cities {
 }
 
 /*---------------------------------------------------------------------------------------------*/
+/*----------------------------------------spotlight---------------------------------------------*/
+.spotlight_wrap {
+  border-radius: 10px;
+  height: 300px;
+  cursor: none;
+  position: relative;
+  -webkit-box-shadow: 0px 0px 5px #f7f2ff;
+          box-shadow: 0px 0px 5px #f7f2ff;
+  padding: 10px;
+  color: #f7f2ff;
+}
+.spotlight_wrap .spotlight {
+  position: absolute;
+  height: 300px;
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+  background-image: radial-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+  -webkit-backdrop-filter: blur(0px);
+          backdrop-filter: blur(0px);
+}
+
+/*---------------------------------------------------------------------------------------------*/
 /*----------------------------------------services---------------------------------------------*/
 .page__services-block {
   position: relative;
