--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -234,6 +234,9 @@ main.page {
 }
 
 .sub-menu {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1138px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -264,7 +267,7 @@ main.page {
   margin: 0 auto;
   max-width: 1138px;
   min-width: 300px;
-  font-size: 13px;
+  font-size: 14px;
   display: grid;
   top: 55px;
   left: 0;
