--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -118,6 +118,9 @@ body {
   transition:.3s linear
 }
 .sub-menu{
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1138px;
   display: flex;
   flex-direction:row;
   position:absolute;
@@ -142,7 +145,7 @@ body {
     margin: 0 auto;
     max-width: 1138px;
     min-width:300px;
-    font-size: 13px;
+    font-size: 14px;
     display: grid;
     top:55px;
     left: 0;
@@ -151,7 +154,7 @@ body {
 
     .menu-item .menu__link{
       padding:5px 10px;
-      font-size:13px
+      font-size:14px
     }
   }
 }
