--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -808,19 +808,17 @@ ul.header_cities {
   position: relative;
   -webkit-box-shadow: 0px 0px 5px #f7f2ff;
           box-shadow: 0px 0px 5px #f7f2ff;
-  padding: 10px;
   color: #f7f2ff;
 }
-.spotlight_wrap .spotlight {
+.spotlight_wrap .spotlight_text {
+  padding: 10px;
   position: absolute;
-  height: 300px;
-  width: 100%;
-  top: 0;
-  left: 0;
+  z-index: 1;
+}
+.spotlight_wrap canvas {
   border-radius: 10px;
-  background-image: radial-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
-  -webkit-backdrop-filter: blur(0px);
-          backdrop-filter: blur(0px);
+  position: absolute;
+  z-index: 2;
 }
 
 /*---------------------------------------------------------------------------------------------*/
@@ -2430,6 +2428,10 @@ span.contacts_item-title {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .page_contacts-text-block {
