сообщение при отправке формы снизу

--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2430,6 +2430,10 @@ span.contacts_item-title {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .page_contacts-text-block {
