--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -117,47 +117,53 @@ body {
   text-decoration:none;
   transition:.3s linear
 }
-.sub-menu{
-  width: 90vw;
-  margin: 0 auto;
-  max-width: 1138px;
-  display: flex;
-  flex-direction:row;
-  position:absolute;
-  top:70px;
-  z-index:5;
-  min-width:200px;
-  border-radius:3px;
-  border:1px solid $main-white-color;
-  visibility:hidden;
-  opacity:0;
-  background:#1f0c37;
-  transform-origin:0 0;
-  transform:rotateX(-90deg);
-  transition:.5s linear;
-  box-shadow:0 0 5px $main-white-color;
 
-  
-
+.header__menu{
   .sub-menu{
-    // left: 205px;
     width: 90vw;
     margin: 0 auto;
     max-width: 1138px;
-    min-width:300px;
-    font-size: 14px;
-    display: grid;
-    top:55px;
-    left: 0;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    flex-direction:row;
+    position:absolute;
+    top:70px;
+    z-index:5;
+    min-width:200px;
+    border-radius:3px;
+    border:1px solid $main-white-color;
+    visibility:hidden;
+    opacity:0;
+    background:#1f0c37;
+    transform-origin:0 0;
+    transform:rotateX(-90deg);
+    transition:.5s linear;
+    box-shadow:0 0 5px $main-white-color;    
+
+    .sub-menu{
+      // left: 205px;
+      width: 90vw;
+      margin: 0 auto;
+      max-width: 1138px;
+      min-width:300px;
+      font-size: 14px;
+      display: grid;
+      top:55px;
+      left: 0;
+      grid-template-columns: repeat(4, 1fr);
 
 
-    .menu-item .menu__link{
-      padding:5px 10px;
-      font-size:14px
+      .menu-item .menu__link{
+        padding:5px 10px;
+        font-size:14px
+      }
     }
   }
+  
+  .sub-menu .menu-item:hover{
+    background: #3A116D;
+  }
 }
+
 
 .menu-item:hover>.sub-menu{
   visibility:visible;
@@ -169,9 +175,7 @@ body {
   // position:relative
 }
 
-.sub-menu .menu-item:hover{
-  background: #3A116D;
-}
+
 
 .sub-menu .menu-item .menu__link{
   color:#fff;
@@ -2160,10 +2164,20 @@ body {
         line-height: 30px;
       }
 
+      .sub-menu{
+        position: static;
+        display:flex;
+        flex-direction: column;
+      }
+
       .sub-menu>.menu-footer__item>.menu-footer__link{
         font-size: 16px;
         font-weight: 500;
         line-height: 24px;
+      }
+
+      .menu-footer__link:hover {
+        text-decoration: underline;
       }
     }
       
