--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -60,7 +60,8 @@
         max-width: 100vw;
     }
     .header_wrapper{
-        margin: 0 20px;
+        max-width: 100%;
+        padding: 0 20px;
         height: 60px;
     }
     .header_wrapper::before {
@@ -145,8 +146,12 @@
         text-transform: uppercase;
     }
 
-    .menu__list{
+    .header__menu .menu__list{
+        width: 100%;
+        align-items: start;
+        padding: 0 15px!important;
         flex-direction: column;
+        gap: 8px;
     }
 
     .header__burger.active::before{
@@ -170,7 +175,7 @@
     .menu__item{        
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: start;
     }
 
     .first_lvl_menu.menu-item:hover>.sub-menu{
@@ -180,8 +185,8 @@
         backdrop-filter: none;
         width: auto;
         padding: 10px;
-        box-shadow: 0px 0px 2px #f7f2ff;
-        gap: 0px;
+        // box-shadow: none;
+        gap: 5px;
 
         a{
             position: relative;
@@ -204,14 +209,24 @@
     }
 
     
+    .header__menu .sub-menu{
+        border: none;
+        border-radius: 0;
+        border-left: 1px solid #f7f2ff;
+        box-shadow: none;
+        background: none;
+    }
+
+    .header__menu .sub-menu .menu-item:hover{
+        background: none;
+    }
 
     header .sub-menu{
         visibility: hidden;
         opacity: 0;
         display: none;
         background: none;
-        box-shadow: none;
-        border: none;
+        box-shadow: none;        
     }
 
     .menu-item:hover>.sub-menu {
@@ -225,9 +240,9 @@
     .first_lvl_menu>.sub-menu>.menu-item:hover>.sub-menu{
         display: flex;
         flex-direction: column;
-        gap:10px;
-        border-top: 1px solid #3f3354;
-        border-bottom: 1px solid #3f3354;
+        gap:5px;
+        text-transform: none;
+        margin: 5px 0;
     }
 
     li.menu-item-has-children > a{
