--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2805,7 +2805,8 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     max-width: 100vw;
   }
   .header_wrapper {
-    margin: 0 20px;
+    max-width: 100%;
+    padding: 0 20px;
     height: 60px;
   }
   .header_wrapper::before {
@@ -2895,11 +2896,17 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
             backdrop-filter: blur(5px);
     text-transform: uppercase;
   }
-  .menu__list {
+  .header__menu .menu__list {
+    width: 100%;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    padding: 0 15px !important;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    gap: 8px;
   }
   .header__burger.active::before {
     -webkit-transform: rotate(45deg);
@@ -2930,9 +2937,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
   }
   .first_lvl_menu.menu-item:hover > .sub-menu {
     display: -webkit-box;
@@ -2947,9 +2954,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
             backdrop-filter: none;
     width: auto;
     padding: 10px;
-    -webkit-box-shadow: 0px 0px 2px #f7f2ff;
-            box-shadow: 0px 0px 2px #f7f2ff;
-    gap: 0px;
+    gap: 5px;
   }
   .first_lvl_menu.menu-item:hover > .sub-menu a {
     position: relative;
@@ -2967,6 +2972,17 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     font-size: 14px;
     padding: 3px;
   }
+  .header__menu .sub-menu {
+    border: none;
+    border-radius: 0;
+    border-left: 1px solid #f7f2ff;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    background: none;
+  }
+  .header__menu .sub-menu .menu-item:hover {
+    background: none;
+  }
   header .sub-menu {
     visibility: hidden;
     opacity: 0;
@@ -2974,7 +2990,6 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     background: none;
     -webkit-box-shadow: none;
             box-shadow: none;
-    border: none;
   }
   .menu-item:hover > .sub-menu {
     visibility: visible;
@@ -2992,9 +3007,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 10px;
-    border-top: 1px solid #3f3354;
-    border-bottom: 1px solid #3f3354;
+    gap: 5px;
+    text-transform: none;
+    margin: 5px 0;
   }
   li.menu-item-has-children > a {
     pointer-events: none;
