--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2876,6 +2876,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     position: fixed;
   }
   .header__menu {
+    overflow: scroll;
     position: fixed;
     left: 0;
     top: -100%;
