--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -131,7 +131,7 @@
     }
 
     .header__menu{
-        overflow: scroll;
+        overflow-y: scroll;
         position:fixed;
         left: 0;
         top: -100%;
