--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2981,6 +2981,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
             box-shadow: none;
     background: none;
   }
+  .header__menu .sub-menu .sub-menu {
+    max-width: unset;
+  }
   .header__menu .sub-menu .menu-item:hover {
     background: none;
   }
