фикс горизонтальной прокрутки меню на мобилах

--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -218,7 +218,7 @@
         background: none;
 
         .sub-menu{
-            max-width: unset;
+            min-width: unset;
         }
     }
 
