--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2774,15 +2774,14 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   text-align: center;
 }
 
-.cloud_tag_link {
-  border: 1px solid #f7f2ff;
-  border-radius: 5px;
-  text-align: center;
-  padding: 10px 0;
-}
-
 .cloud_tag-slide {
   margin: 0 5px;
+  border-radius: 10px;
+  text-align: center;
+  padding: 10px;
+  -webkit-box-shadow: 0px 0px 3px #f7f2ff;
+          box-shadow: 0px 0px 3px #f7f2ff;
+  color: #a992c7;
 }
 
 @media (max-width: 768px) {
