--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2306,7 +2306,10 @@ body {
   //   text-align: center;
   //   padding: 10px 0
   // }
-    
+  .cloud_tag_slider .slick-track{
+    padding: 5px 0;
+  }
+
   .cloud_tag-slide {
     margin: 0 5px;
     // border: 1px solid $main-white-color;
