готовый интерактивный банер

--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -813,6 +813,18 @@ ul.header_cities {
   padding: 10px;
   position: absolute;
   z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
 }
 .spotlight_wrap canvas {
   border-radius: 10px;
