--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -730,6 +730,11 @@ body {
       padding: 10px;
       position: absolute;
       z-index: 1;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+      gap: 10px;
     }
 
     canvas{
