--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1343,7 +1343,8 @@ body {
     height:200px
   }
   .useful-articles__body .articles__img img{
-    max-height:200px;
+    //max-height:200px;
+    height:100%;
     object-fit: cover;
     border-radius: 5px 5px 0 0;
   }
