--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -824,12 +824,18 @@ ul.header_cities {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 10px;
+  gap: 16px;
 }
 .spotlight_wrap canvas {
   border-radius: 10px;
   position: absolute;
   z-index: 2;
+}
+.spotlight_wrap .spotlight_key:nth-child(odd) {
+  margin-top: -8px;
+}
+.spotlight_wrap .spotlight_key:nth-child(even) {
+  margin-bottom: -8px;
 }
 
 /*---------------------------------------------------------------------------------------------*/
@@ -1577,7 +1583,7 @@ section.form_row {
 }
 
 .useful-articles__body .articles__img img {
-  max-height: 200px;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 5px 5px 0 0;
