--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -728,7 +728,7 @@ body {
       flex-wrap: wrap;
       justify-content: space-evenly;
       align-items: center;
-      gap: 10px;
+      gap: 16px;
     }
 
     canvas{
@@ -739,6 +739,17 @@ body {
       // object-fit: cover;
       z-index:2;
     }
+
+    .spotlight_key:nth-child(odd){
+      margin-top: -8px
+    }
+    .spotlight_key:nth-child(even){
+      margin-bottom: -8px
+    }
+
+    // svg{
+    //   position: absolute;
+    // }
 
   //   .spotlight {
   //     position: absolute;
