--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2805,16 +2805,16 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   color: #a992c7;
 }
 
-#promo_modal {
-  width: 400px;
-  right: -500px;
-}
-
 #promo_modal.active {
   right: 50px;
 }
 
 #promo_modal {
+  width: 400px;
+  right: -500px;
+  background: -webkit-gradient(linear, left top, right top, from(#ee7752), color-stop(#e73c7e), color-stop(#23a6d5), to(#23d5ab));
+  background: linear-gradient(90deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
   max-height: 600px;
   font-family: "Inter";
   display: block;
@@ -2831,23 +2831,26 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   top: 50%;
   -webkit-transform: translate(0px, -50%);
           transform: translate(0px, -50%);
+  -webkit-box-shadow: 0px 0px 3px #f7f2ff;
+          box-shadow: 0px 0px 3px #f7f2ff;
 }
 #promo_modal .promo_modal_close {
   text-align: end;
 }
 #promo_modal .promo_modal_close a {
-  color: #1a0930;
+  color: #fff;
   font-size: 25px;
   line-height: 25px;
 }
 #promo_modal .promo_title {
   font-size: 18px;
   padding-bottom: 20px;
-  color: #1a0930;
+  color: #fff;
 }
 #promo_modal .promo_subtitle {
   font-size: 16px;
   padding-bottom: 10px;
+  color: #fff;
 }
 #promo_modal .contact_form input {
   background-color: #fff;
