--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1380,7 +1380,8 @@ body {
   #tab_btn_1:checked~#tab_1,
   #tab_btn_2:checked~#tab_2,
   #tab_btn_3:checked~#tab_3,
-  #tab_btn_4:checked~#tab_4 {
+  #tab_btn_4:checked~#tab_4,
+  #tab_btn_5:checked~#tab_5 {
     display: flex;
   } 
 
