--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -344,6 +344,10 @@
         font-size: 15px;
     }
 
+    .tabs > label {        
+        margin-bottom: 10px;
+    }
+
 }
 
 @media(max-width:925px){
@@ -479,9 +483,8 @@
         margin-right: 10px;
         margin-bottom: 10px;
     }
-
-
 }
+
 @media(max-width:630px){
     .main-title{
         font-size:30px
